# django-stagedoor

./: .pre-commit-config.yaml  MANIFEST.in  PRE_COMMIT_README.md  Pipfile  README.md  deploy.sh  justfile  pyproject.toml  pyproject.toml.bk  runtests.py  setup.py  tox.ini
.github/workflows/: RELEASE_WORKFLOW_README.md  main.yml  release.yml
src/stagedoor/: admin.py  backends.py  helpers.py  models.py  settings.py  urls.py  views.py
src/stagedoor/migrations/: 0001_initial.py  0002_authtoken_approved.py
src/stagedoor/templates/: stagedoor_approval_email.html  stagedoor_approval_email.txt  stagedoor_approval_needed.html  stagedoor_email.html  stagedoor_email.txt  stagedoor_token_input.html
src/tests/: conftest.py  settings.py  test_admin.py  test_backend.py  test_backends.py  test_helpers.py  test_models.py  test_views.py  urls.py
stagedoor/: admin.py  apps.py  backends.py  helpers.py  models.py  serializers.py  settings.py  urls.py  views.py
stagedoor/migrations/: 0001_initial.py  0002_auto_20200408_0415.py  0003_auto_20200408_0417.py  0004_auto_20200507_2028.py  0005_alter_authtoken_id_alter_email_id_and_more.py
stagedoor/templates/: stagedoor_email.html  stagedoor_email.txt  stagedoor_token_input.html
tests/: test_backend.py  test_views.py  urls.py
